# mortality-ami-predictor

./: .gitignore  README.md  TESIS_COMPLETA_DR_MAIKEL_SANTOS_MEDINA.txt  cleaned_dataset_20260102_161731.csv
Tools/: .gitignore  CUSTOM_MODELS_FINAL_FIX.md  DOCUMENTATION.md  Makefile  README.md  SISTEMA_DOCUMENTACION.md  analyze_data.py  build_docs.py  calc_recuima.py  descriptive_stats.json  diagnose_data.py  docs-requirements.txt  environment-autosklearn.yml  environment.yml  explore_variables.py  generate_api_docs.py  generate_clean_dataset.py  individual_scores.csv  mkdocs.yml  pyproject.toml  pytest.ini  requirements-autosklearn.txt  requirements.txt  run_experiments.ps1  run_experiments.sh  scales_validation_results.csv  serve_docs.ps1  setup.py  streamlit_app.py  test_alignment.py  tmp_inspect_complicaciones.py
Tools/app/: state.py  ui_utils.py
Tools/cloud/: automl_mortality_prediction.ipynb  results.csv  results.json
Tools/dashboard/: Dashboard.py  streamlit_app.py
Tools/docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.jupyter  README.md  docker-compose.yml  healthcheck.sh
Tools/docs/: .pages  AUTOML_GUIDE.md  BUGFIX_CUSTOM_MODELS_GRACE.md  CUSTOM_MODELS_ARCHITECTURE.md  CUSTOM_MODELS_GUIDE.md  CUSTOM_MODELS_QUICKSTART.md  ICA_UI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PDF_GENERATION_GUIDE.md  README.md  about.md  changelog.md  index.md
Tools/exploration_results/: exploration_results_20260108_113546.json  exploration_results_20260108_113819.json  exploration_results_20260108_153457.json
Tools/models/: trained_models_mortality.json  trained_models_mortality_in_hospital.json
Tools/notebooks/: boruta_feature_selection.ipynb  eda.ipynb  experiments.ipynb  explainability.ipynb  inverse_optimization_demo.md  modeling.ipynb  visualizar_frontera.ipynb
Tools/reports/: DATA_CLEANING_EDA_GUIDE.md  README.txt  evaluation_report_mortality.md
Tools/scripts/: README.md  logs.sh  parse_complicaciones_for_scales.py  (+4 more)
(+336 files in other folders)
